compiler/testData/cli/jvm/apiVersionLessThanLanguage.out
compiler/testData/cli/jvm/apiVersion.kt:2:15: error: unresolved reference: isInstance
    ""::class.isInstance(42)
              ^
COMPILATION_ERROR
